--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ jar {
     manifest {
         attributes 'Main-Class': mainClassName
     }
-    from configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) }
+    from configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
 }
 
 
