--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "com.worksap.nlp:sudachi:0.1.1-SNAPSHOT"
+
+    compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.6'
 }
 
 compileKotlin {
