--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ import com.github.spotbugs.SpotBugsTask
 
 plugins {
     id 'application'
-    id 'com.github.spotbugs' version '1.6.9'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id "com.github.spotbugs" version "3.0.0"
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 group 'com.github.shiguruikai'
@@ -18,16 +18,16 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "com.worksap.nlp:sudachi:0.1.1-SNAPSHOT"
+    implementation "com.worksap.nlp:sudachi:0.3.2"
 
     compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.11'
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "11"
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "11"
 }
 
 tasks.withType(SpotBugsTask) {
